--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Phantom Consulting, LLC.</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Phantom Consulting, LLC</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
       </div>
